@@ -1,3 +1,7 @@
+Tue Oct 31 23:39:49 CET 2006 Denis Barbier <barbier@users.sourceforge.net>
+
+	* src/org/jcae/mesh/amibe/metrics/Metric3D.java: New det() method.
+
 Tue Oct 31 11:30:01 CET 2006 Denis Barbier <barbier@users.sourceforge.net>
 
 	* src/org/jcae/mesh/amibe/ds/Mesh.java
